Use deleteLater() to delete SpectacleWindows

It turns out QWindow::destroy(), effectively called by QWindow::close()
(according to Qt docs), doesn't actually delete windows.

BUG: 467401


(cherry picked from commit 91761ff95981d52efc217bda3f068a28d6156118)